
option java_outer_classname="GetReaderNextChunkCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message GetReaderNextChunkCommand {
    optional string readerId = 1;
	optional int32 nextIndex = 2;
	optional int64 requestId = 3;
	optional string nodeIP = 4;
}
